chore(config): add new table options into json config example and template

--- a/config/config_template.json
+++ b/config/config_template.json
@@ -17,6 +17,8 @@
         "patient_assessments": 1,
         "respiratory_support": 1,
         "medication_admin_continuous": 1,
-        "position": 1
+        "position": 1,
+        "crrt_therapy": 1,
+        "ecmo_mcs": 1
     }
 }
