chore(config): update config template and example to include hospital_diagnosis and increment clif_version to 2.1

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -27,6 +27,7 @@
         "medication_admin_continuous": 1,
         "position": 1,
         "crrt_therapy": 1,
-        "ecmo_mcs": 1
+        "ecmo_mcs": 1,
+        "hospital_diagnosis": 1
     }
 }
