--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,16 @@
 [project]
 name = "clif-mimic"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.3.1"
+description = "Converting the MIMIC-IV dataset into the Common Longitudinal ICU data Format (CLIF)"
 readme = "README.md"
 requires-python = ">=3.10.5"
 dependencies = [
-    "duckdb>=1.3.2",
+    "duckdb>=1.3.0",
+    "fastparquet>=2024.11.0",
+    "pandas>=2.3.3",
+    "pandera>=0.26.1",
+    "pyarrow>=21.0.0",
+    "sf-hamilton>=1.88.0",
 ]
 
 [dependency-groups]
