--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
 dev = [
     "auto-mix-prep>=0.2.0",
     "google-api-python-client>=2.184.0",
+    "ipykernel>=6.30.1",
     "marimo>=0.16.4",
+    "matplotlib>=3.10.7",
+    "pytest>=8.4.2",
     "sqlglot>=27.18.0",
     "watchdog>=6.0.0",
 ]
