--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "clif-mimic"
-version = "0.3.1"
+version = "1.0.1"
 description = "Converting the MIMIC-IV dataset into the Common Longitudinal ICU data Format (CLIF)"
 readme = "README.md"
 requires-python = ">=3.10.5"
 dependencies = [
     "duckdb>=1.3.0",
     "fastparquet>=2024.11.0",
+    "marimo>=0.18.4",
     "pandas>=2.3.3",
     "pandera>=0.26.1",
     "pyarrow>=21.0.0",
@@ -16,7 +21,9 @@ dependencies = [
 [dependency-groups]
 dev = [
     "auto-mix-prep>=0.2.0",
+    "clifpy>=0.3.1",
     "google-api-python-client>=2.184.0",
+    "graphviz>=0.21",
     "ipykernel>=6.30.1",
     "marimo>=0.16.4",
     "matplotlib>=3.10.7",
@@ -24,3 +31,6 @@ dev = [
     "sqlglot>=27.18.0",
     "watchdog>=6.0.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
